--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,6 +81,9 @@ GlobalDefaultServerGameMode=None
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.Engine]
+NearClipPlane=10.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
