--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -49,6 +49,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="FireMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="ADS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
