Sorted Files,  Fire Selector, Super basic Shoot
Fire Selector needs to be reworked in order to be able to select different fire modes for each weapon and not have 1 enum for all the guns

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -46,7 +46,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="MovementAbility",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="MouseLeftClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="FireMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="ADS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
